--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Portfolio Website</title>
   </head>
   <body>
     <div class="portfolio-container">
       <nav class="nav-bar">
-        <div class="nav-logo">
+        <!-- <div class="nav-logo">
           <img src="images/logo.jpg" alt="sr-logo" class="logo" />
           <h2 class="logo-name">
             Sajad Rauf <br />
             Developers
           </h2>
-        </div>
+        </div> -->
         <ul class="nav-list">
           <li><a href="">Home</a></li>
           <li><a href="">About</a></li>
@@ -24,6 +31,34 @@
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
+      <div class="left-container"></div>
+      <div class="right-container"></div>
+
+      <!-- <div class="intro-sec">
+        <div class="icons">
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-linkedin"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-twitter"></i>
+        </div>
+        <div class="content">
+          <h2 class="content-name">Hi! I am Hafsa Shahid</h2>
+          <h1>Frontend Web Developer</h1>
+          <p>
+            Hi, I’m Hafsa Shahid, a front-end developer who loves crafting
+            clean, responsive, and intuitive user interfaces. With a focus on
+            performance and aesthetics, I bring ideas to life using HTML, CSS,
+            and JavaScript frameworks like React. I’m passionate about creating
+            seamless digital experiences that look great and function smoothly
+            across devices. Check out my work below, and let’s create something
+            amazing together!
+          </p>
+          <div class="buttons">
+            <button>Hire me</button>
+            <button>View Project</button>
+          </div>
+        </div>
+      </div> -->
     </div>
   </body>
 </html>
