--- a/index.html
+++ b/index.html
@@ -15,50 +15,130 @@
   </head>
   <body>
     <div class="portfolio-container">
-      <nav class="nav-bar">
-        <!-- <div class="nav-logo">
-          <img src="images/logo.jpg" alt="sr-logo" class="logo" />
-          <h2 class="logo-name">
-            Sajad Rauf <br />
-            Developers
-          </h2>
-        </div> -->
-        <ul class="nav-list">
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">BLogs</a></li>
-          <li><a href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <div class="left-container"></div>
-      <div class="right-container"></div>
+      <!-- Home sec-start -->
+      <div class="container">
+        <nav class="nav-bar">
+          <div class="nav-logo">
+            <img src="images/logo.jpg" alt="sr-logo" class="logo" />
+            <h2 class="logo-name">
+              Sajad Rauf <br />
+              Developers
+            </h2>
+          </div>
+          <ul class="nav-list">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">BLogs</a></li>
+            <li><a href="">Contacts</a></li>
+          </ul>
+        </nav>
 
-      <!-- <div class="intro-sec">
-        <div class="icons">
-          <i class="fa-brands fa-facebook-f"></i>
-          <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-twitter"></i>
-        </div>
-        <div class="content">
-          <h2 class="content-name">Hi! I am Hafsa Shahid</h2>
-          <h1>Frontend Web Developer</h1>
-          <p>
-            Hi, I’m Hafsa Shahid, a front-end developer who loves crafting
-            clean, responsive, and intuitive user interfaces. With a focus on
-            performance and aesthetics, I bring ideas to life using HTML, CSS,
-            and JavaScript frameworks like React. I’m passionate about creating
-            seamless digital experiences that look great and function smoothly
-            across devices. Check out my work below, and let’s create something
-            amazing together!
-          </p>
-          <div class="buttons">
-            <button>Hire me</button>
-            <button>View Project</button>
+        <div class="intro-sec">
+          <div class="icons">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+          </div>
+          <div class="content">
+            <p class="intro">Hi! I am <span>Hafsa Shahid</span></p>
+            <h1>Frontend Web Developer</h1>
+            <p class="detail">
+              Hi, I’m Hafsa Shahid, a front-end developer who loves crafting
+              clean, responsive, and intuitive user interfaces. With a focus on
+              performance and aesthetics, I bring ideas to life using HTML, CSS,
+              and JavaScript frameworks like React. I’m passionate about
+              creating seamless digital experiences that look great and function
+              smoothly across devices. Check out my work below, and let’s create
+              something amazing together!
+            </p>
+            <div class="btn-container">
+              <button class="content-btn-one">Hire me</button>
+              <button class="content-btn-two">
+                <a href="https://github.com/Hafsu0107">View Projects</a>
+              </button>
+            </div>
           </div>
         </div>
-      </div> -->
+      </div>
+      <!-- home-sec-comp -->
+      <section class="our-services">
+        <h3 class="service-heading"><span>Our</span> Services</h3>
+        <p class="service-para">
+          We provide high standar clean website for your business solutions
+        </p>
+        <div class="card-wrapper">
+          <div class="card">
+            <img src="images/paintbrush-solid.svg" alt="" class="svg-icon" />
+            <h4 class="card-heading">Graphic Design</h4>
+            <p>
+              There are many variations of passages of but the majority have
+              suffered alteration in some form.
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/code-solid.svg" alt="" class="svg-icon" />
+            <h4 class="card-heading">Web Development</h4>
+            <p>
+              There are many variations of passages of but the majority have
+              suffered alteration in some form.
+            </p>
+          </div>
+          <div class="card">
+            <img src="images/rectangle-ad-solid.svg" alt="" class="svg-icon" />
+            <h4 class="card-heading">Media Marketing</h4>
+            <p>
+              There are many variations of passages of but the majority have
+              suffered alteration in some form.
+            </p>
+          </div>
+          <div class="card">
+            <img class="svg-icon" src="images/desktop-solid.svg" alt="" />
+
+            <h4 class="card-heading">Web Design</h4>
+            <p>
+              There are many variations of passages of but the majority have
+              suffered alteration in some form.
+            </p>
+          </div>
+          <div class="card">
+            <img class="svg-icon" src="images/film-solid.svg" alt="" />
+            <h4 class="card-heading">Motion Graphic</h4>
+            <p>
+              There are many variations of passages of but the majority have
+              suffered alteration in some form.
+            </p>
+          </div>
+          <div class="card">
+            <img class="svg-icon" src="images/mobile-solid.svg" alt="" />
+            <h4 class="card-heading">Apps</h4>
+            <p>
+              There are many variations of passages of but the majority have
+              suffered alteration in some form.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- sec-service-complete -->
+      <!-- freelancer -->
+      <section class="freelancer">
+        <h2 class="freelancer-heading">I am availiable for Freelancer.</h2>
+        <p>We provide high standar clean website for your business solutions</p>
+        <button class="download-cv">Download CV</button>
+      </section>
+      <!-- freelancer sec end -->
+      <!-- blog sec-start -->
+      <section class="blog">
+        <div class="blog-container">
+          <h3 class="blog-heading">Blog</h3>
+          <div class="blog-card">
+            <div class="blog-card-one">
+              <img src="" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
