--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Services</a></li>
-            <li><a href="">BLogs</a></li>
+            <li><a href="">Portfolio</a></li>
             <li><a href="">Contacts</a></li>
           </ul>
         </nav>
@@ -129,16 +129,111 @@
       </section>
       <!-- freelancer sec end -->
       <!-- blog sec-start -->
-      <section class="blog">
-        <div class="blog-container">
-          <h3 class="blog-heading">Blog</h3>
-          <div class="blog-card">
-            <div class="blog-card-one">
-              <img src="" alt="" />
+      <section class="portfolio">
+        <div class="portfolio-sec">
+          <h3 class="portfolio-heading">Portfolio</h3>
+          <h4 class="last-projects">My Last Projects</h4>
+          <div class="card-wrapper">
+            <div class="card">
+              <img src="images/Faq.webp" alt="" class="pics" />
+
+              <h4 class="card-heading">FAQ WEB</h4>
+            </div>
+            <div class="card">
+              <img
+                src="images/e-commerce product page.webp"
+                alt=""
+                class="pics"
+              />
+              <h4 class="card-heading">E-COMMERCE product page</h4>
+            </div>
+            <div class="card">
+              <img src="images/intro sec.webp" alt="" class="pics" />
+              <h4 class="card-heading">INTRO WEB</h4>
+            </div>
+            <div class="card">
+              <img src="images/meet landing page.webp" alt="" class="pics" />
+
+              <h4 class="card-heading">MEET LANDING PAGE</h4>
+            </div>
+            <div class="card">
+              <img src="images/news homepage.webp" alt="" class="pics" />
+              <h4 class="card-heading">NEWS HOMEPAGE</h4>
+            </div>
+            <div class="card">
+              <img src="images/product card.webp" alt="" class="pics" />
+              <h4 class="card-heading">PRODUCT CARD</h4>
+            </div>
+            <div class="card">
+              <img src="images/notification page.webp" alt="" class="pics" />
+              <h4 class="card-heading">NOtiFICATION PAGE</h4>
+            </div>
+            <div class="card">
+              <img src="images/kanban tasks.webp" alt="" class="pics" />
+              <h4 class="card-heading">KANBAN TASKS</h4>
+            </div>
+            <div class="card">
+              <img src="images/calculator.webp" alt="" class="pics" />
+              <h4 class="card-heading">AGE CALCULATOR</h4>
             </div>
           </div>
         </div>
       </section>
+      <!-- portfolio-sec-end -->
+      <!-- contact-sec-end -->
+      <section class="contact-us">
+        <div class="contact-sec">
+          <h4 class="contact-heading">Contact <span>us</span></h4>
+        </div>
+        <div class="card-wrapper">
+          <div class="card">
+            <i class="fa-solid fa-mobile"></i>
+            <h3 class="call-us">Call Us On</h3>
+            <h4 class="numb">+92 3142644250</h4>
+          </div>
+          <div class="card">
+            <i class="fa-regular fa-envelope"></i>
+            <h3 class="email">Email Us At</h3>
+            <h4 class="mail">hafsushahid790@gmail.com</h4>
+          </div>
+          <div class="card">
+            <i class="fa-regular fa-map"></i>
+            <h3 class="map">Location</h3>
+            <h4 class="numb">---</h4>
+          </div>
+        </div>
+        <form action="">
+          <div class="input-wrap">
+            <input type="text" placeholder="Your Name *" />
+            <input type="email" placeholder="Your Email *" />
+          </div>
+          <div class="input-second-wrap">
+            <input type="subject" placeholder="Subject" />
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="Your Message....."
+            ></textarea>
+            <div class="btn-wrapper">
+              <button class="send-msg">SEND MESSAGE</button>
+            </div>
+          </div>
+        </form>
+      </section>
+      <!-- contact us sec-end -->
+      <footer>
+        <div class="footer-sr-logo">
+          <h5 class="footer-logo"></h5>
+          <div class="footer-icons">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-twitter"></i>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
