--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-twitter"></i>
           </div>
+          <div class="copyright">Copyright 2024 © Sajjad Rauf</div>
         </div>
       </footer>
     </div>
