--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
       <section class="freelancer">
         <h2 class="freelancer-heading">I am availiable for Freelancer.</h2>
         <p>We provide high standar clean website for your business solutions</p>
-        <button class="download-cv">Download CV</button>
+        <button class="download-cv">
+          <a href="file:///D:/Cv/Hafsa%20Shahid.pdf">Download CV</a>
+        </button>
       </section>
       <!-- freelancer sec end -->
       <!-- blog sec-start -->
