--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <nav class="nav-bar">
           <div class="nav-logo">
-            <img src="images/logo.jpg" alt="sr-logo" class="logo" />
+            <img src="images/ar-logo.jpg" alt="sr-logo" class="logo" />
             <h2 class="logo-name">
               Sajad Rauf <br />
               Developers
