--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Portfolio Website</title>
+    <title>www.abdulrauftechnology</title>
   </head>
   <body>
     <div class="portfolio-container">
@@ -21,8 +21,8 @@
           <div class="nav-logo">
             <img src="images/ar-logo.jpg" alt="sr-logo" class="logo" />
             <h2 class="logo-name">
-              Sajad Rauf <br />
-              Developers
+              AbDuL_R@Uf <br />
+              TeChNoLoGy
             </h2>
           </div>
           <ul class="nav-list">
@@ -42,8 +42,8 @@
             <i class="fa-brands fa-twitter"></i>
           </div>
           <div class="content">
-            <p class="intro">Hi! I am <span>Hafsa Shahid</span></p>
-            <h1>Frontend Web Developer</h1>
+            <!-- <p class="intro">Hi! I am <span>Hafsa Shahid</span></p> -->
+            <h1>Welcome To Rauf Technology</h1>
             <p class="detail">
               Hi, I’m Hafsa Shahid, a front-end developer who loves crafting
               clean, responsive, and intuitive user interfaces. With a focus on
@@ -54,7 +54,7 @@
               something amazing together!
             </p>
             <div class="btn-container">
-              <button class="content-btn-one">Hire me</button>
+              <!-- <button class="content-btn-one">Hire me</button> -->
               <button class="content-btn-two">
                 <a href="https://github.com/Hafsu0107">View Projects</a>
               </button>
