--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>www.abdulrauftechnology</title>
+    <title>www.abdulrauftechnologies</title>
   </head>
   <body>
     <div class="portfolio-container">
@@ -22,7 +22,7 @@
             <img src="images/ar-logo.jpg" alt="sr-logo" class="logo" />
             <h2 class="logo-name">
               AbDuL_R@Uf <br />
-              TeChNoLoGy
+              TeChNoLoGiES
             </h2>
           </div>
           <ul class="nav-list">
@@ -43,15 +43,19 @@
           </div>
           <div class="content">
             <!-- <p class="intro">Hi! I am <span>Hafsa Shahid</span></p> -->
-            <h1>Welcome To Rauf Technology</h1>
+            <h1>Welcome To RS Technologies</h1>
             <p class="detail">
-              Hi, I’m Hafsa Shahid, a front-end developer who loves crafting
-              clean, responsive, and intuitive user interfaces. With a focus on
-              performance and aesthetics, I bring ideas to life using HTML, CSS,
-              and JavaScript frameworks like React. I’m passionate about
-              creating seamless digital experiences that look great and function
-              smoothly across devices. Check out my work below, and let’s create
-              something amazing together!
+              At [Rauf Sajad Technologies], we are passionate about delivering
+              advanced technological solutions that help businesses unlock new
+              possibilities and drive growth. We specialize in a wide range of
+              technology services, from software development and cloud computing
+              to artificial intelligence and IoT solutions, all designed to
+              streamline operations, enhance efficiency, and create smarter,
+              more connected experiences. Our team of tech experts is committed
+              to staying ahead of industry trends and providing innovative
+              solutions that are tailored to meet the unique challenges of your
+              business. We believe in the power of technology to transform
+              industries, improve lives, and foster long-term success.
             </p>
             <div class="btn-container">
               <!-- <button class="content-btn-one">Hire me</button> -->
@@ -70,27 +74,57 @@
         </p>
         <div class="card-wrapper">
           <div class="card">
+            <img src="images/ai.png" alt="" class="svg-icon" />
+            <h4 class="card-heading">AI</h4>
+            <p>
+              Welcome to Rauf Technologies, where we harness the power of
+              advanced AI to move your business forward. Our mission is to
+              empower companies like yours with innovative artificial
+              intelligence services in Pakistan, USA, and worldwide, designed to
+              enhance efficiency, boost scalability, and increase productivity.
+              Discover how our customized AI development services can keep you
+              ahead of the competition and drive your business to new heights.
+            </p>
+          </div>
+
+          <div class="card">
             <img src="images/paintbrush-solid.svg" alt="" class="svg-icon" />
             <h4 class="card-heading">Graphic Design</h4>
             <p>
-              There are many variations of passages of but the majority have
-              suffered alteration in some form.
+              We provide premium sort of graphic design services all over
+              Pakistan. Our graphic designers are not only expert in graphic
+              designing but also they’re up-to-date as far as web promotion is
+              concerned. So here you can get multiple benefits under a table
+              which is our specialty. RS is known for producing best logo design
+              in Pakistan.
             </p>
           </div>
           <div class="card">
             <img src="images/code-solid.svg" alt="" class="svg-icon" />
             <h4 class="card-heading">Web Development</h4>
             <p>
-              There are many variations of passages of but the majority have
-              suffered alteration in some form.
+              Elexoft, a very well renowned web development company currently
+              working in Pakistan. We’re bunch of guys who’re adept and skillful
+              web designers and we are master of this field. Site advancement
+              has been an issue and we as web Development Company working
+              enthusiastically to come up with first-rate solution. We’ll keep
+              on working until we get the job done. Here at RS, you’ll get any
+              web of your choice and it’s our responsibility to give you our
+              best through our website maintenance services.
             </p>
           </div>
           <div class="card">
             <img src="images/rectangle-ad-solid.svg" alt="" class="svg-icon" />
-            <h4 class="card-heading">Media Marketing</h4>
+            <h4 class="card-heading">Digital Marketing</h4>
             <p>
-              There are many variations of passages of but the majority have
-              suffered alteration in some form.
+              We are crackerjack of our field and we are proficient when it
+              comes to web development and marketing aspects. We’ve been
+              providing superlative sort of digital marketing services in
+              Pakistan. We know what is required to make your business a
+              sensation and we have highly skillful team which can turn the
+              table around as far as your business growth is concerned. SEO
+              technique is something which is essential to make a brand grow and
+              we have SEO specialist from all over Pakistan.
             </p>
           </div>
           <div class="card">
@@ -98,24 +132,48 @@
 
             <h4 class="card-heading">Web Design</h4>
             <p>
-              There are many variations of passages of but the majority have
-              suffered alteration in some form.
+              We specialize in creating visually stunning and user-friendly
+              websites that capture the essence of your brand. Our expert team
+              of web designers combines creativity with functionality to deliver
+              designs that not only look great but also offer a seamless user
+              experience. Whether you’re looking to establish a bold online
+              presence or refresh your existing site, we work closely with you
+              to bring your vision to life. We believe that great design goes
+              beyond aesthetics—it’s about creating an experience that engages,
+              informs, and converts visitors into loyal customers.
             </p>
           </div>
           <div class="card">
             <img class="svg-icon" src="images/film-solid.svg" alt="" />
             <h4 class="card-heading">Motion Graphic</h4>
             <p>
-              There are many variations of passages of but the majority have
-              suffered alteration in some form.
+              we create captivating motion graphics that tell your brand’s story
+              in a dynamic and engaging way. Whether you need animated explainer
+              videos, logo animations, promotional visuals, or social media
+              content, we specialize in bringing your ideas to life through
+              visually stunning motion graphics. Our talented team of designers
+              and animators blend creativity with technical expertise to produce
+              high-quality animations that grab attention, communicate complex
+              concepts, and enhance your brand’s digital presence. We work
+              closely with you to craft motion graphics that are not only
+              visually compelling but also aligned with your marketing goals.
             </p>
           </div>
           <div class="card">
             <img class="svg-icon" src="images/mobile-solid.svg" alt="" />
-            <h4 class="card-heading">Apps</h4>
+            <h4 class="card-heading">Mobile Apps</h4>
             <p>
-              There are many variations of passages of but the majority have
-              suffered alteration in some form.
+              we design and develop innovative, user-friendly mobile
+              applications that bring your business to the fingertips of your
+              customers. Whether you’re looking to launch a new app or enhance
+              an existing one, our team of expert developers specializes in
+              creating mobile solutions that deliver seamless experiences on
+              iOS, Android, and cross-platform environments. We understand that
+              in today’s mobile-first world, having an app that is functional,
+              fast, and engaging is essential for success. Our process is
+              centered on your goals, ensuring that every app we develop is
+              designed to meet the unique needs of your business while providing
+              a smooth and intuitive user experience.
             </p>
           </div>
         </div>
@@ -123,10 +181,10 @@
       <!-- sec-service-complete -->
       <!-- freelancer -->
       <section class="freelancer">
-        <h2 class="freelancer-heading">I am availiable for Freelancer.</h2>
+        <h2 class="freelancer-heading">We are available for Freelancer.</h2>
         <p>We provide high standar clean website for your business solutions</p>
         <button class="download-cv">
-          <a href="file:///D:/Cv/Hafsa%20Shahid.pdf">Download CV</a>
+          <a href="https://www.fiverr.com/shafsa81?up_rollout=true">Details</a>
         </button>
       </section>
       <!-- freelancer sec end -->
@@ -134,7 +192,7 @@
       <section class="portfolio">
         <div class="portfolio-sec">
           <h3 class="portfolio-heading">Portfolio</h3>
-          <h4 class="last-projects">My Last Projects</h4>
+          <h4 class="last-projects">This is our last works</h4>
           <div class="card-wrapper">
             <div class="card">
               <img src="images/Faq.webp" alt="" class="pics" />
@@ -191,12 +249,12 @@
           <div class="card">
             <i class="fa-solid fa-mobile"></i>
             <h3 class="call-us">Call Us On</h3>
-            <h4 class="numb">+92 3142644250</h4>
+            <h4 class="numb">+923363057013</h4>
           </div>
           <div class="card">
             <i class="fa-regular fa-envelope"></i>
             <h3 class="email">Email Us At</h3>
-            <h4 class="mail">hafsushahid790@gmail.com</h4>
+            <h4 class="mail">abdulraufqaimkhani809@gmail.com</h4>
           </div>
           <div class="card">
             <i class="fa-regular fa-map"></i>
