--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
           <div class="content">
             <!-- <p class="intro">Hi! I am <span>Hafsa Shahid</span></p> -->
-            <h1>Welcome To RS Technologies</h1>
+            <h1>Welcome To AR Technologies</h1>
             <p class="detail">
               At [Rauf Sajad Technologies], we are passionate about delivering
               advanced technological solutions that help businesses unlock new
